--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ tag_dir: tags
 archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
-i18n_dir: :lang
-skip_render:
+i18n_dir: : lang
+skip_render: [google43aea2046af77d30.html, 404.html]
 
 # Writing
 new_post_name: :title.md # File name of new posts
