--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ tag_dir: tags
 archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
-i18n_dir: lang
+i18n_dir: :lang
 skip_render: [google43aea2046af77d30.html, 404.html]
 
 # Writing
