--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render: [google43aea2046af77d30.html, 404.html]
+skip_render: [google43aea2046af77d30.html, 404.html, baidu_verify_egE6WSZPvu.html]
 
 # Writing
 new_post_name: :title.md # File name of new posts
