--- a/themes/hexo-theme-tranquilpeak/_config.yml
+++ b/themes/hexo-theme-tranquilpeak/_config.yml
@@ -36,15 +36,15 @@ sidebar:
             icon: fa fa-home
         categories:
             title: global.categories
-            url: /all-categories
+            url: /categories
             icon: fa fa-bookmark
         tags:
             title: global.tags
-            url: /all-tags
+            url: /tags
             icon: fa fa-tags
         archives:
             title: global.archives
-            url: /all-archives
+            url: /archives
             icon: fa fa-archive
         search:
             title: global.search
@@ -59,7 +59,7 @@ sidebar:
     author_links:
         github:
             title: global.github
-            url: https://github.com/
+            url: https://github.com/PatrickRoot
             icon: fab fa-github
         stack_overflow:
             title: global.stack_overflow
@@ -68,7 +68,7 @@ sidebar:
         twitter:
             title: global.twitter
             url: https://twitter.com/
-            icon: fab fa-twitter
+            icon: fab fa-stamp
         facebook:
             title: global.facebook
             url: https://facebook.com/
@@ -107,8 +107,8 @@ sidebar:
 header:
     right_link:
         url: /#about
-        icon:
-        class:
+        icon: fa fa-search
+        class: open-algolia-search
 
 
 # ------
@@ -117,21 +117,21 @@ header:
 
 # Your biography and your job is editable in each languages files in `languages` folder
 author:
-    email:
-    location:
+    email: root@sixlab.cn
+    location: 漯河 · 中国
     # Your profile picture located in folder `source/_images/` (development)
     # or in `source/assets/images/` (production)
     # or you can use an external url
     # Overwritten by your gravatar image if `gravatar_email` is filled
-    picture:
+    picture: avatar.jpg
     # Your Twitter username without the @. E.g : `tranquilpeak`
-    twitter:
+    twitter: nianqinianyi
     # Your personal google plus profile id, not your blog or business page id.
     # E.g : `+JohnDoe` or `123812884128439`
-    google_plus:
+    google_plus: +PatrickRoot
     # Your businnes google plus profile id. If not provided, personal will be used instead.
     # E.g : `+Tranquilpeak` or `123812884128439`
-    google_plus_business:
+    google_plus_business: 
 
 
 # -------------
@@ -150,7 +150,7 @@ author:
 # large sidebar is swiped on all lower screens
 # 5: Display header bar on all screens and large sidebar is swiped on large screen
 # 6: Display header bar on all screens and medium sidebar is swiped
-sidebar_behavior: 1
+sidebar_behavior: 2
 # Hide sidebar on all article page to let article take full width to improve reading, and
 # enjoy wide images and cover images. (true: enable, false: disable)
 clear_reading: true
@@ -172,9 +172,9 @@ auto_thumbnail_image: true
 # Otherwise put your image in folder `source/_images/` (development)
 # or in `source/assets/images/` if you can't or don't want to build the theme,
 # and use relative url : `your-image.png`
-cover_image: cover.jpg
+cover_image: cover-v1.2.0.jpg
 # Your favicon located in folder `source/_images/` (development) or in `source/assets/images/` (production)
-favicon:
+favicon: 
 # Display an image gallery at the end of a post which have photos variables (false: disabled, true: enabled)
 image_gallery: true
 # Pagination behavior of archive, category and tag pages (false: pagination disabled, true: pagination enabled)
@@ -211,7 +211,7 @@ google_analytics_id:
 # Your Baidu analystics web property ID : 9505a5af654a2478f93fd6c0ae4f687d
 baidu_analytics_id:
 # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
-gravatar_email:
+gravatar_email: 
 # Your Facebook user ids used to connect your blog with your facebook user accounts (Facebook Insights). Separate ids with comma. e.g : 9830047,1003342
 fb_admin_ids:
 # Your Facebook app id used to connect your blog with your facebook app account (Facebook Insights). E.g : 9841307
@@ -250,18 +250,18 @@ sharing_options:
         icon: "fab fa-google-plus"
         url: "https://plus.google.com/share?url={{post.permalink}}"
     # Asian social networks
-#    weibo:
-#        title: "Weibo"
-#        icon: "fab fa-weibo"
-#        url: "http://service.weibo.com/share/share.php?&title={{post.permalink}}"
-#    qq:
-#        title: "QQ"
-#        icon: "fab fa-qq"
-#        url: "http://connect.qq.com/widget/shareqq/index.html?url={{post.permalink}}&title={{post.title}}"
-#    qzone:
-#        title: "Qzone"
-#        icon: "fa fa-star"
-#        url: "http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url={{post.permalink}}"
+    weibo:
+        title: "微博"
+        icon: "fab fa-weibo"
+        url: "http://service.weibo.com/share/share.php?title={{post.permalink}}"
+    qq:
+        title: "QQ"
+        icon: "fab fa-qq"
+        url: "http://connect.qq.com/widget/shareqq/index.html?url={{post.permalink}}&title={{post.title}}"
+    qzone:
+        title: "QQ空间"
+        icon: "fa fa-star"
+        url: "http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url={{post.permalink}}"
 #    renren:
 #        title: "Renren"
 #        icon: "fab fa-renren"
