--- a/themes/hexo-theme-tranquilpeak/package.json
+++ b/themes/hexo-theme-tranquilpeak/package.json
@@ -31,14 +31,14 @@
   "devDependencies": {
     "eslint": "4.18.2",
     "eslint-config-google": "0.9.1",
-    "grunt": "1.0.2",
+    "grunt": "^1.0.3",
     "grunt-cli": "1.2.0",
     "grunt-contrib-clean": "1.1.0",
     "grunt-contrib-concat": "1.0.1",
     "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-cssmin": "2.2.1",
     "grunt-contrib-uglify": "3.3.0",
-    "grunt-contrib-watch": "1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-sails-linker": "1.0.4",
     "grunt-sass": "2.1.0",
     "grunt-sync": "0.8.0",
