样式微调，剩下图片、目录、缩略图处理、代码高亮、第三方链接

--- a/themes/hexo-theme-tranquilpeak/_config.yml
+++ b/themes/hexo-theme-tranquilpeak/_config.yml
@@ -44,7 +44,7 @@ sidebar:
             icon: fa fa-tags
         archives:
             title: global.archives
-            url: /archives
+            url: /archive
             icon: fa fa-archive
         search:
             title: global.search
